<resources>
    <string name="app_name">P9_RecyclerView</string>
    <string name="image">Image</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="get_new">Get new</string>
    <string name="create_new">Create new</string>
    <string name="loginString">¿Como te llamas?</string>
    <string name="apellidoString">¿Y tu apellido?</string>
    <string name="edadString">¿Cuantos años tienes?</string>
    <string name="btn_apuntoString">Me apunto</string>
    <string name="politicaString">Política de Privacidad</string>
    <string name="condicionesString">Ver Condiciones</string>
    <string name="upcoming_meetups">Upcoming meetups</string>
    <string name="angelesString">USA, Los Angeles - 2 weeks</string>
    <string name="angelesCityString">City of Los Angeles</string>
    <string name="maldivasString">Maldivas - 3 weeks</string>
    <string name="vacationString">Beach vacation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>